log
Wed 27 Mar 2024 02:05:15 PM UTC: 
 list.c | 71 +++++++++++++++++++++++++++++++++++++++++++++++++++++-------------
 1 file changed, 57 insertions(+), 14 deletions(-)
In file included from test.c:5:
list.c: In function ‘pushFront’:
list.c:73:10: error: array subscript ‘Node[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds]
   73 |   newNode->data = data;
      |          ^~
list.c:72:26: note: referencing an object of size 8 allocated by ‘malloc’
   72 |   Node* newNode = (Node*)malloc(sizeof(Node*));
      |                          ^~~~~~~~~~~~~~~~~~~~~
list.c:74:10: error: array subscript ‘Node[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds]
   74 |   newNode->next = list->head;
      |          ^~
list.c:72:26: note: referencing an object of size 8 allocated by ‘malloc’
   72 |   Node* newNode = (Node*)malloc(sizeof(Node*));
      |                          ^~~~~~~~~~~~~~~~~~~~~
list.c: In function ‘pushCurrent’:
list.c:86:10: error: array subscript ‘Node[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds]
   86 |   newNode->data = data;
      |          ^~
list.c:85:26: note: referencing an object of size 8 allocated by ‘malloc’
   85 |   Node* newNode = (Node*)malloc(sizeof(Node*));
      |                          ^~~~~~~~~~~~~~~~~~~~~
list.c:87:10: error: array subscript ‘Node[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds]
   87 |   newNode->next = list->current->next;
      |          ^~
list.c:85:26: note: referencing an object of size 8 allocated by ‘malloc’
   85 |   Node* newNode = (Node*)malloc(sizeof(Node*));
      |                          ^~~~~~~~~~~~~~~~~~~~~
list.c:89:10: error: array subscript ‘Node[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds]
   89 |   newNode->prev = list->current;
      |          ^~
list.c:85:26: note: referencing an object of size 8 allocated by ‘malloc’
   85 |   Node* newNode = (Node*)malloc(sizeof(Node*));
      |                          ^~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
1e33b4b
